Add support for links
git-svn-id: https://svn.code.sf.net/p/snippetory/code/trunk@221 154fa62a-ae8f-480d-91fd-dc75d68c4636